# dev-envs

./: .envrc  Pipfile  README.md  TODOs.org  pyproject.toml  shell.nix
nix/: pythonEnv.nix  rustEnv.nix  sources.json
