[tool.poetry]
name = "MRDev"
version = "0.0"
description = ""
authors = ["Roberto Di Remigio"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
parselglossy = "^0.7"
yapf = "^0.29"
pyls-isort = "^0.1"
python-language-server = { version="^0.34" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
