[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "VeloxChem"
version = "1.0"
description = "VeloxChem: an electronic structure code"
authors = ["Roberto Di Remigio <roberto.diremigio@gmail.com>"]

[tool.poetry.dependencies]
numpy = "^1.13"
python = "^3.5"
mpi4py = "^3.0"
h5py = "^2.8"
loprop = "^0.2.3"
psutil = "^5.6.7"
pybind11 = "^2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.1.2"
pytest-cov = "^2.7.1"
